[package]
name = "blockchain_event_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
web3 = "0.18"
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
clap = { version = "4.3", features = ["derive"] }