[package]
name = "blockchain_event_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.1"
log = "0.4"
dotenv = "0.15"
clap = { version = "4.3", features = ["derive"] }
primitive-types = "0.12.1"
alloy = { version = "0.1.4", features = ["full"] }
eyre = "0.6.12"
futures-util = "0.3.30"